<resources>
    <string name="app_name">Back4AppExample</string>


    <string name="back4app_server_url" translatable="false">https://parseapi.back4app.com/</string>

    <string name="back4app_app_id" translatable="false">WqPh0y3MH8HaVKj0vfb71xAefv1u3mAkyjD1ypcx</string>
    <string name="back4app_client_key" translatable="false">xbVNeAwgFAV6fkeQmyVAkW0R6jQpFJUAXWhUPm62</string>

    <string name="title_activity_sign_up">SignUp</string>
    <string name="prompt_firstName">First Name</string>
    <string name="prompt_surname">Surname</string>
    <string name="prompt_phoneNo">Phone No</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_up">Register</string>
    <string name="action_sign_in">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid email</string>
    <string name="invalid_password">Password must be 8 or more characters including at least 1: Lowercase letter, uppercase letter, digit, and special character</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_login">Login</string>
    <string name="dont_have_account">Don\'t have an account? Click here to sign up</string>
    <string name="account1Name">Savings Account (placeholder)</string>
    <string name="account1Number">00001111</string>
    <string name="account1SortCode">06-07-08</string>
    <string name="account1Balance">£4300</string>
    <string name="shareDetailsButton">Share Details</string>
    <string name="statementButton">Statement</string>
    <string name="lockButton">Lock</string>
    <string name="renameButton">Rename</string>
    <string name="renamePopUp">Change Account Name:</string>
    <string name="icons8Credits">Taskbar icons from ICONS8: https://icons8.com</string>
    <string name="flaticonCredits">Lock icons made by Those Icons from www.flaticon.com</string>
    <string name="yourAccounts">Your Account:</string>
    <string name="newAccountButton">+New Vault</string>
    <string name="newAccountPopup">Name your new vault:</string>
    <string name="prompt_accountName">Account Name</string>
    <string name="backButton">Back</string>
    <string name="createButton">Create Account</string>
    <string name="transactions">Transactions</string>
    <string name="current_account_default">Current Account</string>
    <string name="account_number_default">00001111</string>
    <string name="sortcode_default">00-11-22</string>
    <string name="balance">Balance</string>
    <string name="vaults">Vaults:</string>
    <string name="home_button">Home</string>
    <string name="analytics_button">Analytics</string>
    <string name="transfers_button">Transfers</string>
    <string name="digital_cards_button">Digital Cards</string>
    <string name="settings_button">Settings</string>
    <string name="account_name_default">Account Name</string>
    <string name="rename_account_hint">Rename Account</string>
    <string name="lock_account_description">Lock Account</string>
    <string name="account_unlocked_description">Account Unlocked</string>
    <string name="account_locked_description">Account Locked</string>
    <string name="failed_login">Login failed. Email/password combination incorrect.</string>

    <string name="title_activity_create_card">createCard</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="remove_card">Remove Card</string>
    <string name="change_pin">Change PIN</string>
    <string name="view_pin">View PIN</string>
    <string name="show_card_details">Show Card Details</string>
    <string name="freezecard">freezeCard</string>
    <string name="freeze_card">Freeze Card</string>
    <string name="unfreeze_card">Unfreeze Card</string>
    <string name="settings">settings</string>
    <string name="todo">TODO</string>
    <string name="cards">cards</string>
    <string name="transfers">transfers</string>
    <string name="homescreen">home_screen</string>
    <string name="image_of_card" />
    <string name="analytics" />
    <string name="add_card">Add Card</string>
    <string name="confirm">Confirm</string>
    <string name="please_choose_a_4_digit_pin">Please choose a 4-digit PIN</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="remove_card">Remove Card</string>
    <string name="change_pin">Change PIN</string>
    <string name="view_pin">View PIN</string>
    <string name="show_card_details">Show Card Details</string>
    <string name="freezecard">freezeCard</string>
    <string name="freeze_card">Freeze Card</string>
    <string name="unfreeze_card">Unfreeze Card</string>
    <string name="settings">settings</string>
    <string name="todo">TODO</string>
    <string name="cards">cards</string>
    <string name="transfers">transfers</string>
    <string name="homescreen">home_screen</string>
    <string name="image_of_card" />
    <string name="analytics" />
    <string name="add_card">Add Card</string>
    <string name="confirm">Confirm</string>
    <string name="please_choose_a_4_digit_pin">Please choose a 4-digit PIN</string>


</resources>