<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.card.ChoosePinForNewCardPage">

    <com.google.android.material.bottomappbar.BottomAppBar
        android:id="@+id/homeBottomAppBar"
        style="@style/Widget.MaterialComponents.BottomAppBar.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        app:backgroundTint="@color/teal_700"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="1.0"
        tools:ignore="BottomAppBar" />

    <ImageButton
        android:id="@+id/homeImageButton"
        android:onClick="homeButtonOnClick"
        android:layout_width="32dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:background="#0000"
        app:layout_constraintBottom_toBottomOf="@+id/homeBottomAppBar"
        app:layout_constraintEnd_toStartOf="@+id/graphImageButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/homeBottomAppBar"
        app:srcCompat="@drawable/icons8_home_page_48"
        android:contentDescription="@string/homescreen" />

    <ImageButton
        android:id="@+id/graphImageButton"
        android:onClick="graphButtonOnClick"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="#0000"
        app:layout_constraintBottom_toBottomOf="@+id/homeBottomAppBar"
        app:layout_constraintEnd_toStartOf="@+id/poundImageButton"
        app:layout_constraintStart_toEndOf="@+id/homeImageButton"
        app:layout_constraintTop_toTopOf="@+id/homeBottomAppBar"
        app:srcCompat="@drawable/icons8_combo_chart_48"
        android:contentDescription="@string/analytics" />

    <ImageButton
        android:id="@+id/poundImageButton"
        android:onClick="poundButtonOnClick"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:background="#0000"
        app:layout_constraintBottom_toBottomOf="@+id/homeBottomAppBar"
        app:layout_constraintEnd_toStartOf="@+id/cardImageButton"
        app:layout_constraintStart_toEndOf="@+id/graphImageButton"
        app:layout_constraintTop_toTopOf="@+id/homeBottomAppBar"
        app:srcCompat="@drawable/icons8_money_pound_48"
        android:contentDescription="@string/transfers" />

    <ImageButton
        android:id="@+id/cardImageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="#0000"
        android:clickable="false"
        android:contentDescription="@string/cards"
        app:layout_constraintBottom_toBottomOf="@+id/homeBottomAppBar"
        app:layout_constraintEnd_toStartOf="@+id/gearsImageButton"
        app:layout_constraintStart_toEndOf="@+id/poundImageButton"
        app:layout_constraintTop_toTopOf="@+id/homeBottomAppBar"
        app:srcCompat="@drawable/icons8_debit_card_48" />

    <ImageButton
        android:id="@+id/gearsImageButton"
        android:onClick="gearsButtonOnClick"
        android:layout_width="32dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:background="#0000"
        app:layout_constraintBottom_toBottomOf="@+id/homeBottomAppBar"
        app:layout_constraintEnd_toEndOf="@+id/homeBottomAppBar"
        app:layout_constraintStart_toEndOf="@+id/cardImageButton"
        app:layout_constraintTop_toTopOf="@+id/homeBottomAppBar"
        app:srcCompat="@drawable/icons8_automation_48"
        android:contentDescription="@string/settings" />

    <EditText
        android:id="@+id/PINReenter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="5"
        android:gravity="center"
        android:inputType="numberPassword"
        android:maxLength="4"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/PIN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="5"
        android:gravity="center"
        android:inputType="numberPassword"
        android:maxLength="4"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.352" />

    <Button
        android:id="@+id/confirmNewCard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirm"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/PINReenter"
        app:layout_constraintVertical_bias="0.255" />

    <TextView
        android:id="@+id/choosePIN"
        android:layout_width="370dp"
        android:layout_height="62dp"
        android:text="@string/please_choose_a_4_digit_pin"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/PIN"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>