<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.vaultPage.VaultPage">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <FrameLayout
            android:id="@+id/accountTopBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/teal_200">

            <EditText
                android:id="@+id/accountName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:focusable="false"
                android:inputType="text"
                android:lines="1"
                android:maxLines="1"
                android:singleLine="true"
                android:text="@string/account_name_default"
                android:textSize="30sp"
                android:textStyle="bold"
                android:autofillHints="@string/account_name_default"
                android:hint="@string/account_name_default"/>

            <ImageView
                android:id="@+id/unlockedImage"
                android:layout_width="27dp"
                android:layout_height="33dp"
                android:layout_gravity="center_vertical|end"
                android:layout_marginEnd="5dp"
                android:adjustViewBounds="false"
                android:visibility="invisible"
                app:srcCompat="@drawable/unlocked"
                android:contentDescription="@string/rename_account_hint" />

            <ImageView
                android:id="@+id/lockedImage"
                android:layout_width="27dp"
                android:layout_height="33dp"
                android:layout_gravity="center_vertical|end"
                android:layout_marginEnd="5dp"
                android:adjustViewBounds="false"
                android:visibility="invisible"
                app:srcCompat="@drawable/locked"
                android:contentDescription="@string/lock_account_description" />
        </FrameLayout>

        <TextView
            android:id="@+id/balance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="40dp"
            android:background="@color/teal_200"
            android:text="@string/balance"
            android:textSize="24sp"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/buttonBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/renameButton"
                style="android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.33"
                android:backgroundTint="@color/teal_200"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:text="@string/renameButton"
                android:textSize="13sp"
                android:textStyle="bold"
                app:cornerRadius="10dp" />

            <Button
                android:id="@+id/lockButton"
                style="android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.33"
                android:backgroundTint="@color/teal_200"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:textSize="13sp"
                android:textStyle="bold"
                app:cornerRadius="10dp" />

        </LinearLayout>

        <TextView
            android:id="@+id/transactionsText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:text="@string/transactions"
            android:textSize="24sp"
            android:textStyle="bold" />

        <View
            android:id="@+id/transactionsDivider"
            style="@style/Divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="10dp"></View>

        <ScrollView
            android:id="@+id/transactionsScrollview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp">

            <LinearLayout
                android:id="@+id/vaultTransactionsList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" />
        </ScrollView>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>